<?xml version="1.0"?>
<package format="2">
  <name>m100_navigation</name>
  <version>0.0.0</version>
  <description>The m100_navigation package</description>
  <maintainer email="malcolm@todo.todo">malcolm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dji_sdk</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>enum34</depend>

</package>
